<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codit.cryptowatchwallet.activity.AddWalletActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            app:navigationIcon="@drawable/ic_back"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:title="Add Wallet"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/add_wallet_activity_parent_padding_left_right"
    android:paddingRight="@dimen/add_wallet_activity_parent_padding_left_right"
    android:paddingTop="@dimen/add_wallet_activity_parent_padding_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/add_wallet_name_layout"
        android:layout_marginTop="@dimen/add_wallet_activity_name_edittext_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_wallet_name_edittext"
            android:hint="Wallet name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/add_wallet_coin_layout"
        android:layout_marginTop="@dimen/add_wallet_activity_address_edittext_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textNoSuggestions"
            android:focusableInTouchMode="false"
            android:id="@+id/add_wallet_coin_edittext"
            android:hint="Coin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_wallet_address_layout"
        android:layout_marginTop="@dimen/add_wallet_activity_address_edittext_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textMultiLine|textNoSuggestions"
            android:id="@+id/add_wallet_address_edittext"
            android:hint="Address"
            android:layout_width="match_parent"
            android:minHeight="@dimen/edit_text_height"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/add_wallet_address_button_layout_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/roboto_bold"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/button_copy_clip"
            android:textColor="@color/colorPrimary"
            android:text="PASTE CLIPBOARD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_alignParentLeft="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:gravity="center"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/roboto_bold"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/button_scan_qr"
            android:textColor="@color/colorPrimary"
            android:text="SCAN QR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>



</LinearLayout>

</LinearLayout>
