...
        Icons - \nhttps://www.flaticon.com\n\nAPI - \nhttps://www.cryptocompare.com\nhttps://www.blockcypher.com
    </string>


    <!--add wallet spinner items array!-->
    <string-array name="add_wallet_spinner_items">
        <item>Bitcoin (BTC)</item>
        <item>Ethereum (ETH)</item>
        <item>Ripple (XRP)</item>
        <item>Litecoin (LTC)</item>
        <item>BitCoin Cash (BCH)</item>
        <item>Dash (DASH)</item>
        <item>Dogecoin (DOGE)</item>
...
